--- a/package.json
+++ b/package.json
@@ -3,6 +3,18 @@
   "version": "0.0.0",
   "description": "Split text",
   "main": "xtal-split.js",
+  "module": "xtal-split.js",
+  "dependencies": {
+    "xtal-element": "0.0.58",
+    "trans-render": "0.0.110"
+  },
+  "devDependencies": {
+    "@webcomponents/webcomponentsjs": "2.2.10",
+    "jiife": "0.0.12",
+    "@types/tape": "4.2.33",
+    "tape": "4.10.1",
+    "xtal-test": "0.0.18"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
